# ocpp

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  SUPPORT.md  dockerfile  ev_client.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  server.py  server_2.0.1.py  server_Auth  server_auth1.6  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation-request.md  documentation_request.md  question.md
.github/actions/setup-python-build-env/: action.yml
.github/workflows/: publish-to-pypi.yml  pull-request.yml
cpo-main/: Change Log.txt  readme.txt
cpo-main/cpo-main/templates/: availability.html  disconnect.html  getlocal.html  getschedule.html  index.html
cpo-main/cpo-main/v16/: charge_point.py  cp_cpo.py  cpo_main.py  http_cpo.py  http_server.py  websocket_server.py
cpo-main/cpo-main/v201/: http_cpo.py  http_server.py
cpo-main/legacy/: cp_cpo.py  cpo_main.py  websocket_server.py
cpo-main/legacy/templates/: base.html  login.html  register.html  remotestop.html  reserve.html  reset.html
cpo-main/v16/: charge_point.py  charge_point_operator.py  cpo_class.py
cpo-main/v16/CPO/: classes.py  database.py  hashing.py  main.py  models.py  oauth2.py  schemas.py  token.py
cpo_main/: Change Log.txt  main.py
cpo_main/database/: database.py  models.py
cpo_main/legacy/: charge_point.py  http_server.py
cpo_main/legacy/old_v16/: http_cpo.py
cpo_main/legacy/old_v201/: charge_point_v201.py  cp_cpo_v201.py  websocket_server.py
cpo_main/legacy/templates/: cache.html  clearcprofile.html  config.html  datatransfer.html  getconfig.html  getdiagnostics.html  home.html  remotestart.html  sendlocallist.html  unlock.html
cpo_main/v16/: charge_point.py  charge_point_operator.py  cpo_class.py  main.py
cpo_main/v16/CPO/: database.py  db_charge_point.py  models.py  oauth2.py  schemas.py  status_db.py  token.py
cpo_main/v201/: charge_point_operator_v201.py  charge_point_v201.py  cpo_class_v201.py
cpo_main/v201/CPO/: classes.py  db_charge_point.py  oauth2.py  schemas.py  token.py
cpo_main/v201/database/: apidata.db
docs/source/: README.rst  central_system.rst  conf.py  debugging.rst  index.rst  installation.rst
docs/source/about/: changelog.rst  contributing.rst  index.rst  ressources.rst
docs/source/api/: charge_point.rst  exceptions.rst  index.rst  messages.rst  routing.rst
docs/source/howto/: aiohttp.rst  django.rst  fastapi.rst  flask.rst  index.rst
docs/source/topic/: errorhandling.rst  index.rst  logging.rst  threading.rst
docs/source/tutorial/: chargepoint.rst  csms.rst  index.rst
docs/source/usage/: client_side.rst  index.rst  server_side.rst
examples/: central_system.py  central_system_transaction.py  charge_point.py  charge_point_transaction.py  ws_server.py
examples/tutorial/v16/: chargepoint.py  csms.py
examples/tutorial/v201/: chargepoint.py  csms.py
examples/v16/: central_system.py  central_system_asgi_stateful.py  central_system_asgi_stateless.py  charge_point.py
examples/v20/: central_system.py  charge_point.py
examples/v201/: central_system.py  charge_point.py
examples/v21/: central_system.py  charge_point.py
examples/v21/schemas/: BootNotificationRequest.json  BootNotificationResponse.json
ocpp/: __init__.py  asgi_routing.py  async_message_handler.py  charge_point.py  exceptions.py  messages.py  routing.py
ocpp/experimental/v21/: README.rst
ocpp/v16/: __init__.py  call.py  call_result.py  charge_point.py  charging_profile.py  classes.py  datatypes.py  datatypes_ext.py  enums.py  ocpp_factory.py
ocpp/v16/schemas/: AuthorizeRequest.json  AuthorizeResponse.json  BootNotification.json  BootNotificationRequest.json  BootNotificationResponse.json  CancelReservationRequest.json  CancelReservationResponse.json  ChangeAvailability.json  ChangeAvailabilityResponse.json  ChangeConfiguration.json  ChangeConfigurationResponse.json  ClearCacheRequest.json  ClearCacheResponse.json  ClearChargingProfile.json  ClearChargingProfileRequest.json  ClearChargingProfileResponse.json  (+48 more)
ocpp/v20/: __init__.py  call.py  call_result.py  enums.py  helpers.py
ocpp/v201/: __init__.py  call.py  call_result.py  datatypes.py  enums.py
ocpp/v21/: __init__.py  call.py  call_result.py  datatypes.py  enums.py
scripts/: schema_to_dataclass.py  schema_to_enums.py  schema_to_enums_v201.py
scripts/v21/: code_generator.py  generate_implementation.py  json_schema_parser.py
tests/: conftest.py  test_charge_point.py  test_charge_point_connection.py  test_exceptions.py  test_messages.py  test_routing.py
tests/v16/: conftest.py  test_enums.py  test_v16_charge_point.py  test_v16_charging_profiles.py  test_v16_enums.py
tests/v20/: conftest.py  test_v20_charge_point.py
tests/v201/: conftest.py  test_enums.py  test_v201_charge_point.py  test_v201_custom_data_serialization.py  test_v201_data_types.py  test_v201_enums.py  test_v201_v2x_charge_point.py
(+378 files in other folders)
