[tool.poetry]
name = "ocpp"
version = "0.15.0"
description = "Python package implementing the JSON version of the Open Charge Point Protocol (OCPP)."
authors = [
	"André Duarte <andre15x@gmail.com>",
	"Auke Willem Oosterhoff <aukewillem.oosterhoff@mobilityhouse.com>",
	"Greg Lutostanski <greg.luto@gmail.com>",
	"Jonathan Herrmann <jonathan.herrmann@mobilityhouse.com>",
	"Laysa Uchoa <laysa.uchoa@gmail.com>",
	"Oz N Tiram <oz.tiram@mobilityhouse.com>",
	"Patrick Roelke <proelke@gmail.com>",
	"Roger <roger.duran@mobilityhouse.com>",
	"dx <dx@mobilityhouse.com>",
	"Jan Vincke <jan.vincke@mobilityhouse.com>",
]
repository = "https://github.com/mobilityhouse/ocpp"
documentation = "https://ocpp.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7'
]

[tool.poetry.dependencies]
python = "^3.7"

jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
asynctest = "^0.13.0"
freezegun = "^1.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
sphinx = "^2.4.5"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
