[tool.poetry]
name = "ocpp"
version = "0.24.0"
description = "Python package implementing the JSON version of the Open Charge Point Protocol (OCPP)."
authors = [
	"André Duarte <andre15x@gmail.com>",
	"Auke Willem Oosterhoff <aukewillem.oosterhoff@mobilityhouse.com>",
	"Greg Lutostanski <greg.luto@gmail.com>",
	"Jared Newell <jared.newell@mobilityhouse.com>",
	"Jonathan Herrmann <jonathan.herrmann@mobilityhouse.com>",
	"Laysa Uchoa <laysa.uchoa@gmail.com>",
	"Oz N Tiram <oz.tiram@mobilityhouse.com>",
	"Patrick Roelke <proelke@gmail.com>",
	"Roger <roger.duran@mobilityhouse.com>",
	"dx <dx@mobilityhouse.com>",
	"Jan Vincke <jan.vincke@mobilityhouse.com>",
]
repository = "https://github.com/mobilityhouse/ocpp"
documentation = "https://ocpp.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7'
]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
# Starting from Python 3.8, asynctest is replaced with a unittest.mock.AsyncMock in standard library.
asynctest = { version = "0.13.0", python = "~3.7" }
pytest = "^7"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
sphinx = "^2.4.5"
black = "^22"
isort = "^5"
flake8 = "^5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
