[tool.poetry]
name = "ocpp"
version = "2.0.0"
description = "Python package implementing the JSON version of the Open Charge Point Protocol (OCPP)."
authors = [
	"André Duarte <andre15x@gmail.com>",
	"Auke Willem Oosterhoff <aukewillem.oosterhoff@mobilityhouse.com>",
	"Greg Lutostanski <greg.luto@gmail.com>",
	"Jared Newell <jared.newell@mobilityhouse.com>",
	"Jonathan Herrmann <jonathan.herrmann@mobilityhouse.com>",
	"Laysa Uchoa <laysa.uchoa@gmail.com>",
	"Oz N Tiram <oz.tiram@mobilityhouse.com>",
	"Patrick Roelke <proelke@gmail.com>",
	"Roger <roger.duran@mobilityhouse.com>",
	"dx <dx@mobilityhouse.com>",
	"Jan Vincke <jan.vincke@mobilityhouse.com>",
]
repository = "https://github.com/mobilityhouse/ocpp"
documentation = "https://ocpp.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.13',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.8',
]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
# Starting from Python 3.8, asynctest is replaced with a unittest.mock.AsyncMock in standard library.
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
hypothesis = "^6.131.9"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.masonry.api"
